Signed-off-by: Dr M H Buddhika Ariyaratne <buddhika.ari@gmail.com>

--- a/src/main/webapp/themes/html5up-hyperspace/index.xhtml
+++ b/src/main/webapp/themes/html5up-hyperspace/index.xhtml
@@ -124,6 +124,18 @@
                             <h3>#{webContentController.findSingleText('service6')}</h3>
                             <p>#{webContentController.findSingleText('service6_details')}</p>
                         </section>
+                        
+                        <section>
+                            <span class="#{webContentController.findSingleText('service7_icon')}"></span>
+                            <h3>#{webContentController.findSingleText('service7')}</h3>
+                            <p>#{webContentController.findSingleText('service7_details')}</p>
+                        </section>
+
+                        <section>
+                            <span class="#{webContentController.findSingleText('service8_icon')}"></span>
+                            <h3>#{webContentController.findSingleText('service8')}</h3>
+                            <p>#{webContentController.findSingleText('service8_details')}</p>
+                        </section>
 
                     </div>
                 </div>
