--- a/src/main/webapp/opd_bill_package.xhtml
+++ b/src/main/webapp/opd_bill_package.xhtml
@@ -124,8 +124,8 @@
 
 
                             <h:panelGrid columns="1" >
-
-                                <p:dialog id="panDoc" header="Add New Doctor" widgetVar="dlg" resizable="false">  
+                                <p:panel style="height: 700px">
+                                    <p:dialog id="panDoc" header="Add New Doctor" widgetVar="dlg" resizable="false">  
                                     <h:panelGrid columns="2" style="margin-bottom:10px">  
                                         <h:outputText id="lblNameD" value="Name" ></h:outputText>
                                         <h:inputText autocomplete="off" id="txtNameD"  value="#{doctorController.current.person.name}"  ></h:inputText>
@@ -316,6 +316,9 @@
                                 </h:panelGroup>
 
 
+                                </p:panel>
+
+                                
 
 
                             </h:panelGrid>
