Closes #642 Signed-off-by: Dr M H Buddhika Ariyaratne <buddhika.ari@gmail.com>

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -5,8 +5,7 @@
       xmlns:h="http://java.sun.com/jsf/html">
     <f:metadata>
         <f:event type="preRenderView" 
-                 
-                 listener="#{sessionController.redirectToLandingPage3()}"/>
+                 listener="#{sessionController.redirectToLandingPage}"/>
     </f:metadata>
     <h:head>
     </h:head>
