--- a/src/main/webapp/resources/ezcomp/login.xhtml
+++ b/src/main/webapp/resources/ezcomp/login.xhtml
@@ -70,7 +70,8 @@
 
                             </div>
                             <div class="card-footer d-flex align-items-center">
-                                <h:commandLink action="#{sessionController.navigateToWebHomePage}" 
+                                <h:commandLink rendered="#{s}"
+                                    action="#{sessionController.navigateToWebHomePage}" 
                                                class="btn btn-secondary"
                                                immediate="true">
                                     <h:graphicImage style="height: 2em;" library="image" name="home.png" alt="Home" styleClass="img-fluid"/>
