--- a/src/main/webapp/indexweb.xhtml
+++ b/src/main/webapp/indexweb.xhtml
@@ -91,7 +91,7 @@
                 <ul class="nav">
                     <li class="nav-item">
                         <h:form>
-                            <h:commandLink value="Login" action="/index.xhtml" class="nav-link link-dark px-2"></h:commandLink>
+                            <h:commandLink value="Login" action="/index1.xhtml" class="nav-link link-dark px-2"></h:commandLink>
                         </h:form>
                     </li>
                     <li class="nav-item"><a href="#" class="nav-link link-dark px-2">Sign up</a></li>
