Signed-off-by: Dr M H Buddhika Ariyaratne <buddhika.ari@gmail.com>

--- a/src/main/webapp/admin/admin_items_index.xhtml
+++ b/src/main/webapp/admin/admin_items_index.xhtml
@@ -15,7 +15,7 @@
                 <h:form>
 
                     <p:panel header="Manage Items/Services" rendered="true">
-                        <p:accordionPanel >
+                        <p:accordionPanel activeIndex="#{investigationCategoryController.manageItemIndex}" >
                             <p:tab title="Manage Investigations">
                                 <h:panelGrid columns="1" >
                                     <p:commandButton   class="btn btn-primary w-100 my-2"  ajax="false" value="Investigations" action="/lab/investigation" />
